--- a/css/estilos.css
+++ b/css/estilos.css
@@ -57,7 +57,7 @@
 }
 
 .background-overlay{
-	background: rgba(48,51,107,0.7);	
+	background: rgba(255, 0, 127, .6980392156862745);	
 }
 
 .form-control, .btn{
